# android-auto-translate

./: .gitignore  Dockerfile  Makefile  README.md  action.yaml  pyproject.toml
.github/workflows/: build-docker.yaml  lint-docker.yaml  lint-markdown.yaml  lint-python.yaml  lint-yaml.yaml  test-python.yaml
auto-translate-docker-action/: Dockerfile  README.md  action.yaml
src/: translations.py
tests/: test_translations.py
