[project]
name = "src"
version = "1.0"
description = "Android Auto Translate"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "googletrans==4.0.0rc1",
    "legacy-cgi>=2.6.4,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "black>=26.3.1,<27",
    "flake8>=7.1.0,<8",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.8,<0.12.0"]
build-backend = "uv_build"
